# kenlm-android

./: .gitignore  CMakeLists.txt  README.md  build.sh  kenlm_jni.cpp
.github/workflows/: build.yml
